# tjtech1

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  README.org
shaders/: compile.sh
src/: main.c  main.h  util.c  util.h
